Fix code review comments